<resources>
    <string name="app_name">Questionnaire App</string>

    <string name="all_google">Choose an Avatar</string>

    <string name="login_title">Sign In</string>
    <string name="login_first_name_placeholder">First Name</string>
    <string name="login_last_name_placeholder">Last Name</string>
    <string name="login_choose_avatar">Choose an Avatar</string>


    <string name="signin_email_placeholder">Email</string>
    <string name="signin_password_placeholder">Password</string>
    <string name="signin_forgot_password"><u>Forgot password?</u></string>
    <string name="signin">Sign In</string>
    <string name="signin_connect_with_google">Google</string>
    <string name="signin_connect_account_with">or connect with</string>
    <string name="signin_background_description">Background image</string>
    <string name="signin_logo_description">Logo image</string>
</resources>
