<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <!--TODO: set attribution of autor of background-->
    <!--<a href="https://www.freepik.com/free-photos-vectors/people">People photo created by pressfoto - www.freepik.com</a>-->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/signin_background_description"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="?shadeColor"/>-->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--TODO: set attribution of autor of background-->
            <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/signin_logo_description"
                android:tint="?colorLogo"
                app:layout_constraintBottom_toTopOf="@+id/tin_signin_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.29000002"
                app:srcCompat="@drawable/ic_logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tin_signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/signin_email_placeholder"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/tin_signin_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_singin_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tin_signin_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/signin_password_placeholder"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/tv_signin_forgot_password"
                app:layout_constraintEnd_toEndOf="@+id/tin_signin_email"
                app:layout_constraintStart_toStartOf="@+id/tin_signin_email"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_singin_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_signin_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/signin_forgot_password"
                app:layout_constraintBottom_toTopOf="@+id/btn_signin"
                app:layout_constraintEnd_toEndOf="@+id/tin_signin_password" />

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="0dp"
                android:text="@string/signin"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="@+id/tin_signin_password"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/tin_signin_password" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="23dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btn_signin_connect_google"
                app:layout_constraintEnd_toEndOf="@+id/btn_signin"
                app:layout_constraintStart_toStartOf="@+id/btn_signin">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="?colorSeparator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/signin_connect_account_with"
                    android:textSize="11sp"
                    android:textAllCaps="true"
                    android:textColor="?colorSeparator" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="?colorSeparator" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_signin_connect_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:backgroundTint="?colorGoogleBackground"
                android:drawableStart="@drawable/ic_google"
                android:drawablePadding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="30dp"
                android:text="@string/signin_connect_with_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>